--- a/static/styles/player.less
+++ b/static/styles/player.less
@@ -2,32 +2,35 @@
   display: none;
 }
 
-@play-loader-padding: 8px;
+@player-button-size: (@navbar-height * 0.9);
+@player-padding-size: (@navbar-height * 0.1) / 2;
+
 #play_disabled {
-  font-size: @navbar-height - (@play-loader-padding * 2);
-  padding: @play-loader-padding 0;
+  font-size: @player-button-size * .9;
+  padding: (@player-padding-size * 2) 0;
   color: white;
 }
 
-#jp_container_1 {
-  font-size: @navbar-height;
+#jp_toggle_play {
+  font-size: @player-button-size;
+  padding: @player-padding-size 0;
   color: white;
   cursor: pointer;
 
   &.jp-state-playing {  // when playing, hide play button
-    .jp-play {
+    .play {
       display: none;
     }
-    .jp-pause {
+    .stop {
       display: block;
     }
   }
 
-  // when paused, hide pause button
-  .jp-play {
+  // when stopped, hide stop button
+  .play {
     display: block;
   }
-  .jp-pause {
+  .stop {
     display: none;
   }
 }
@@ -40,5 +43,26 @@
     .fa-check {
       display: none;
     }
+  }
+
+  @media (max-width: @grid-float-breakpoint) {
+    background-color: #fff;
+    border: 1px solid @gray-light;
+    border-radius: 0 0 4px 4px;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    li a {
+      color: @gray;
+      &:hover {
+        color: @gray;
+        background-color: @gray-light;
+      }
+    }
+  }
+}
+
+#quality_select_toggle {
+  &:active, &:focus {
+    background-color: transparent;
   }
 }
